assets/css/style.css
/* font-family: 'Rubik Mono One', sans-serif;
font-family: 'Rubik', sans-serif; */
body{
    background-image: url("../images/background.png");
    /* backdrop-filter: grayscale(90%); */
}
.container{
    display: flex;
    align-items: center;
    justify-content: center;
    overflow: auto;
}

.title-container{
    display: flex;
    align-items: center;
    justify-content: center;
    overflow: auto;
    flex-direction: column;
}
#title{
    margin: 15px auto;
    display: block;
    font-size: 5vw;
    display: flex;
    align-items: center;
    justify-content: center;
    overflow: auto;
    font-family: 'Rubik Mono One', sans-serif;
    color: #FFCC03;
    -webkit-text-stroke-width: .4vw;
    -webkit-text-stroke-color: #1F4079;
    overflow: hidden;
}

#title2, #title3, #title4, #title5{
    margin: 15px auto;
    display: block;
    font-size: 4vw;
    display: flex;
    align-items: center;
    justify-content: center;
    overflow: auto;
    font-family: 'Rubik Mono One', sans-serif;
    color: #FFCC03;
    -webkit-text-stroke-width: .4vw;
    -webkit-text-stroke-color: #1F4079;
    overflow: hidden;
    display: none;
}

img.character{
    margin: 15px auto;
    display: inline-flex;
    height: 15vw;
}

.container .red.animation:hover{
    border: .1vw black solid;
    background-image: linear-gradient(#E3453D, #FCA767);
    height: 18vw;
    border-radius: 5%;
}

.container .green.animation:hover{
    border: .1vw black solid;
    background-image: linear-gradient(#56921F, #68A198);
    height: 18vw;
    border-radius: 5%;
}

.container .blue.animation:hover{
    border: .1vw black solid;
    background-image: linear-gradient(#84CABF, #B4B6B7);
    height: 18vw;
    border-radius: 5%;
}

.container .yellow.animation:hover{
    border: .1vw black solid;
    background-image: linear-gradient(#FFF200, #9A0133);
    border-radius: 5%;
    height: 18vw;
}

#list, #list2{
    display: flex;
    margin: 15px auto;
    flex-direction: column;
    justify-content: left;
    height: 15vw;
    width: 35vw;
    display: none;
    font-family: 'Rubik', sans-serif;
    font-size: 3vw;
    font-weight: 800;
    color: rgba(245, 245, 245, 0.856);
}

#chosenPokemon{
    margin: 15px auto;
    display: flex;
    height: 15vw;
    align-items: center;
    justify-content: center;
}

#pokemon-div{
    display: flex;
    margin: 15px auto;
    align-items: center;
    justify-content: center;
    overflow: auto;
    height: 15vw;
    width: 37vw;
    display: none;
    flex-wrap: wrap;
}

.nextPokemon.notAvailable{
    display: none;
}
.nextPokemon.available{
    max-width: 75%;
    max-height: 75%;
}

.nextPokemon.available:hover{
    border-radius: 25%;
    border: .1vw rgb(255, 235, 156) solid;
}

.nextPokemon.available:active{
    border-radius: 25%;
    border: .1vw rgb(250, 250, 250) solid;
}

.subTitle{
    text-align: center;
    font-family: 'Rubik Mono One', sans-serif;
    font-size: 2.5vw;
    font-weight: 800;
    color: #FFCC03;
    -webkit-text-stroke-width: .1vw;
    -webkit-text-stroke-color: #1F4079;
    flex-basis: 100%;
}

#attackBox{
    position: relative;
    margin: 15px auto;
    margin-bottom: auto;
    align-items: left bottom;
    overflow: auto;
    height: 15vw;
    width: 37vw;
    display: none;
    flex-wrap: wrap;
    border: .5vw black solid;
    background-color: white;
    font-family: courier, sans-serif;
    font-size: 1.5vw;
    font-weight: 200;
    color: rgba(22, 22, 22, 0.856);
}

#attack{
    display: flex;
    position: fixed;
    z-index: 1;
    height: auto;
    width: auto;
    padding: 1vw;
    right: .5vw;
    bottom: .5vw;
    display: none;
    font-family: 'Rubik Mono One', sans-serif;
    font-size: 2vw;
    font-weight: 200;
    color: #1F4079;
    border: .2vw black solid;
    background-color:#FFCC03;
}

